--- a/proyect/Use_case_part1.ipynb
+++ b/proyect/Use_case_part1.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "id": "67eb534c",
    "metadata": {},
    "outputs": [],
@@ -45,20 +45,21 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.datasets import load_breast_cancer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import (accuracy_score, precision_score, recall_score, \n",
-    "                            f1_score, confusion_matrix, classification_report)\n",
-    "from sklearn.cluster import KMeans, DBSCAN\n",
-    "from sklearn.metrics import silhouette_score\n",
-    "from sklearn.decomposition import PCA\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "from sklearn.metrics import (\n",
+    "    accuracy_score, \n",
+    "    precision_score, \n",
+    "    recall_score, \n",
+    "    f1_score, \n",
+    "    confusion_matrix, \n",
+    "    classification_report\n",
+    ")\n",
+    "\n",
+    "from sklearn.datasets import load_breast_cancer"
    ]
   },
   {
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "id": "1b7f2868",
    "metadata": {},
    "outputs": [],
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "id": "eb024742",
    "metadata": {},
    "outputs": [
@@ -304,7 +305,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "id": "7b0bba53",
    "metadata": {},
    "outputs": [
@@ -397,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "id": "0b876116",
    "metadata": {},
    "outputs": [
@@ -846,7 +847,7 @@
        "target                     0.000000    1.000000     1.000000     1.00000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "id": "3a8da681",
    "metadata": {},
    "outputs": [
@@ -906,7 +907,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "id": "a1d2ea75",
    "metadata": {},
    "outputs": [
@@ -944,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "id": "8ae85f88",
    "metadata": {},
    "outputs": [
@@ -966,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "id": "166c47e5",
    "metadata": {},
    "outputs": [
@@ -996,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "id": "7ae05aa4",
    "metadata": {},
    "outputs": [
@@ -1035,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "id": "318d62e0",
    "metadata": {},
    "outputs": [],
@@ -1047,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "id": "5a4d6d0b",
    "metadata": {},
    "outputs": [],
@@ -1058,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "id": "42600620",
    "metadata": {},
    "outputs": [],
@@ -1079,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "id": "1f3602f8",
    "metadata": {},
    "outputs": [],
@@ -1124,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "id": "bb783718",
    "metadata": {},
    "outputs": [
@@ -1163,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "id": "dd9f0c0f",
    "metadata": {},
    "outputs": [
@@ -1202,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 57,
    "id": "c5534c6e",
    "metadata": {},
    "outputs": [
@@ -1241,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "id": "2c84c29f",
    "metadata": {},
    "outputs": [],
@@ -1274,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 59,
    "id": "d0b0ab5e",
    "metadata": {},
    "outputs": [
@@ -1353,7 +1354,7 @@
        "Bosque Aleatorio     0.970760   0.963964  0.990741  0.977169"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1366,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 60,
    "id": "7f3ab4f1",
    "metadata": {},
    "outputs": [
